--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
     <title>Document</title>
 </head>
 <body id="lightMode">
+    <div class="blur-background"></div>
     <div class="top-line">
-
     </div>
-    <button type="button" onclick="lightMode()">
+    <button class="darkmode" type="button" onclick="lightMode()">
         Light / Dark mode
     </button>
     <h1 id="countdown"></h1>
+    <div class="cookie-melding">
+        <div class="buttons">
+            <div class="button-accept">
+                <button onclick="cookieBox()">Accept</button>
+            </div>
+            <div class="button-decline">
+                <button onclick="cookieBox()">Decline</button>
+            </div>
+        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam cupiditate rerum soluta nobis vel fuga recusandae reiciendis est perspiciatis, dicta laudantium consequuntur impedit autem veniam expedita sequi eos ipsam voluptate. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda, deleniti illo eligendi ad temporibus qui libero cum illum similique nostrum, quos minima in iusto! Corrupti incidunt necessitatibus aliquid atque. Beatae <a href="#">...read more</a>
+        </p>
+    </div>
     <nav>
         <ul>    
             <li><a href="about-me.html">About me</a></li> 
