--- a/about-me.html
+++ b/about-me.html
@@ -19,8 +19,8 @@
             <li><a href="index.html">Home</a></li> 
             <li><a href="projects.html">Projects</a></li>
             <li><a href="interview.html">Interview</a></li>
-            <li><a href="contact-form.html" id="contactme">Contact me</a></li>
         </ul>
+        <a href="contact-form.html" id="contactme">Contact me</a>
     </nav>
     <div class="bottom-line">
         
@@ -77,7 +77,7 @@
                 <td></td>
               </tr>
               <tr style="background-color: rgb(40, 40, 40);">
-                <td>Python</td>
+                <td>Javascript</td>
                 <td style="text-align: center;">✔</td>
                 <td></td>
                 <td></td>
